Fixed useEffect in SelectedMovie, had a function wrapping a function that was not needed.

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,18 @@ body {
 
 /* ******* */
 
+.box::-webkit-scrollbar {
+  display: none;
+}
+ 
+.list::-webkit-scrollbar {
+  display: none;
+}
+ 
+.list-watched::-webkit-scrollbar {
+  display: none;
+}
+
 .nav-bar {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
